[project]
name = "ml-toybox"
version = "0.0.3"
authors = [
    {name="Shun Huang", email="shun@formosa1544.com"}
]
description = "Machine Learning ToyBox"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.13"
dependencies = []
license = {text = "MIT License"}
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python"
]
keywords = ["Machine Learning"]

[tool.setuptools.packages.find]
exclude = ["examples", "tests"]

[project.urls]
repository = "https://github.com/burpeesDaily/ml-toybox"
